多验证方式

--- a/poseidon-system/src/main/resources/static/resources/login.html
+++ b/poseidon-system/src/main/resources/static/resources/login.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<form method="post" action="/login">
-    <input type="text" name="password" value="w">
-    <input type="text" name="username" value="w">
+<form method="post" action="/sign_in">
+    <input type="text" name="password" value="ww">
+    <input type="text" name="username" value="ww">
     <input type="submit" name="test">
 </form>
 <h1>登录信息放入session</h1>
