完善业务逻辑

--- a/poseidon-system/src/main/resources/static/resources/sign.html
+++ b/poseidon-system/src/main/resources/static/resources/sign.html
@@ -5,10 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<h1>WELCOME</h1>
 <form method="post" action="/sign_in">
-    <input type="text" name="password" value="ww">
-    <input type="text" name="username" value="ww">
+    <input type="text" name="password" value="muggle">
+    <input type="text" name="username" value="muggle">
+    <input type="text" name="nickname" value="muggle">
     <input type="submit" name="test">
 </form>
 </body>
