完善业务逻辑

--- a/poseidon-system/src/main/resources/static/resources/sign.html
+++ b/poseidon-system/src/main/resources/static/resources/sign.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form method="post" action="/sign_in">
+<form method="post" action="/sign_up">
     <input type="text" name="password" value="muggle">
     <input type="text" name="username" value="muggle">
     <input type="text" name="nickname" value="muggle">
