完善业务逻辑

--- a/poseidon-system/src/main/resources/static/resources/sign.html
+++ b/poseidon-system/src/main/resources/static/resources/sign.html
@@ -9,6 +9,7 @@
     <input type="text" name="password" value="muggle">
     <input type="text" name="username" value="muggle">
     <input type="text" name="nickname" value="muggle">
+    <input type="text" name="verification" value="muggle">
     <input type="submit" name="test">
 </form>
 </body>
