完善业务逻辑

--- a/poseidon-system/src/main/resources/static/resources/login.html
+++ b/poseidon-system/src/main/resources/static/resources/login.html
@@ -7,8 +7,9 @@
 <body>
 <h1>WELCOME</h1>
 <form method="post" action="/sign_in">
-    <input type="text" name="password" value="ww">
-    <input type="text" name="username" value="ww">
+    用户名：<input type="text" name="username" value="admin"><br>
+    密码：<input type="text" name="password" value="muggle"><br>
+    <input type="text" name="verification"><br>
     <input type="submit" name="test">
 </form>
 </body>
