--- a/poseidon-system/src/main/resources/static/resources/404.html
+++ b/poseidon-system/src/main/resources/static/resources/404.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>404</title>
+    <title>找不到页面</title>
+    <link href="http://119.23.75.58/resources/ico/test.ico" rel="SHORTCUT ICON">
     <style class="cp-pen-styles">
         .me404 {
             width: 1000px;
