--- a/poseidon-system/src/main/resources/static/resources/404.html
+++ b/poseidon-system/src/main/resources/static/resources/404.html
@@ -1693,5 +1693,10 @@
     var path = document.getElementById('tail');
     path.setAttribute('d', 'M89,315c2.2-15.2-23-13.2-21.6,4.8c1.7,22.3,24.4,22.1,42.5,9.1c10.8-7.8,15.3-1.8,19.1,1.1 c2.3,1.7,6.7,3.3,11-3');
 </script>
+<div style="text-align: center">
+    <a href="http://www.baidu.com" style="color: coral;text-decoration : none;font-family: KaiTi;font-size: 15px" >跳转至首页 &nbsp;</a>
+    <a href="http://www.baidu.com" style="color: coral;text-decoration : none;font-family: KaiTi;font-size: 15px" >&nbsp;给我留言</a>
+</div>
+
 </body>
 </html>
