--- a/poseidon-system/src/main/resources/static/resources/404.html
+++ b/poseidon-system/src/main/resources/static/resources/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>找不到页面</title>
-    <link href="http://119.23.75.58/resources/ico/test.ico" rel="SHORTCUT ICON">
+    <link href="http://119.23.75.58/test.ico" rel="SHORTCUT ICON">
     <style class="cp-pen-styles">
         .me404 {
             width: 1000px;
@@ -1694,8 +1694,8 @@
     path.setAttribute('d', 'M89,315c2.2-15.2-23-13.2-21.6,4.8c1.7,22.3,24.4,22.1,42.5,9.1c10.8-7.8,15.3-1.8,19.1,1.1 c2.3,1.7,6.7,3.3,11-3');
 </script>
 <div style="text-align: center">
-    <a href="http://www.baidu.com" style="color: coral;text-decoration : none;font-family: KaiTi;font-size: 15px" >跳转至首页 &nbsp;</a>
-    <a href="http://www.baidu.com" style="color: coral;text-decoration : none;font-family: KaiTi;font-size: 15px" >&nbsp;给我留言</a>
+    <a href="http://www.baidu.com" style="color: coral;text-decoration : none;font-family: KaiTi;font-size: 20px" >跳转至首页 &nbsp;</a>
+    <a href="http://www.baidu.com" style="color: coral;text-decoration : none;font-family: KaiTi;font-size: 20px" >&nbsp;给我留言</a>
 </div>
 
 </body>
