--- a/poseidon-oa/src/main/resources/static/pear/login.html
+++ b/poseidon-oa/src/main/resources/static/pear/login.html
@@ -1,80 +1,143 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title></title>
-		<link rel="stylesheet" href="admin/css/pearForm.css" />
-		<link rel="stylesheet" href="component/layui/css/layui.css" />
-		<link rel="stylesheet" href="admin/css/pearButton.css" />
-		<style>
-			.layui-form{width: 330px;margin: auto;margin-top: 180px;}
-			.layui-form button{width: 100%;height: 44px;line-height: 44px;font-size: 16px;font-weight: 550;}
-			.layui-form-checked[lay-skin=primary] i {border-color: #2D8CF0 !important;background-color: #2D8CF0;color: #fff;}
-			.layui-tab-content{margin-top: 15px;padding-left: 0px;padding-right: 0px;}
-			.layui-form-item{margin-top: 20px;}
-			.layui-input{height: 44px;line-height: 44px;padding-left: 15px;border-radius: 3px;}
-			.layui-input:focus{box-shadow: 0px 0px 3px 1px #2D8CF0!important;}
-			.logo{width: 60px;margin-top: 10px;margin-bottom: 10px;margin-left:20px;}
-			.title{font-size: 30px;font-weight: 550;margin-left: 20px;color: #2D8CF0 !important;display: inline-block;height: 60px;line-height: 60px;margin-top: 10px;position: absolute;}
-			.desc{width: 100%;text-align: center;color: gray;height: 60px;line-height: 60px;}
-		</style>
-	</head>
-	<body background="admin/images/background.svg">
-	    <form class="layui-form" action="javascript:void(0);">
-			<div class="layui-form-item">
-				<img class="logo" src="admin/images/logo.png" />
-				<div class="title">欢迎登陆poseidon</div>
-				<div class="desc">
-					poseidon 管理系统
-				</div>
-			</div>
-            <div class="layui-form-item">
-				<input placeholder="账 户 : admin" hover class="layui-input" id="username" />
-			</div>
-			<div class="layui-form-item">
-				<input placeholder="密 码 : 888888" hover class="layui-input" type="password" id="password"/>
-			</div>
-			<div class="layui-form-item">
-				<input type="checkbox" name="" title="记住密码" lay-skin="primary" checked>
-			</div>
-            <div class="layui-form-item">
-				<button class="pear-btn pear-btn-primary login">
-					登 入 
-				</button>
-			</div>
-		</form>
-		<script src="component/layui/layui.js"></script>
-		<script>
-			layui.use(['form', 'element','jquery'], function() {
-				var flag=true;
-				var from = layui.form;
-				var element = layui.element;
-				var $ = layui.jquery;
-				$("body").on("click",".login",function(){
-					if (flag) {
-						flag=false;
-						$.ajax({
-							type: "post",
-							url: "/sign_in",
-							dataType : "json",
-							contentType : "application/json",
-							data: JSON.stringify({username:$('#username').val(),password:$('#password').val()}),
-							success: function (data) {
-								console.log(data);
-								if (data.code==200){
-									location.href="index.html"
-								}else  {
-									layer.msg(data.message);
-									flag=true
-								}
-							},
-						error: function () {
-							flag=true
-						}},
-						);
-					}
-				})
-			})
-		</script>
-	</body>
+<head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="admin/css/pearForm.css"/>
+    <link rel="stylesheet" href="component/layui/css/layui.css"/>
+    <link rel="stylesheet" href="admin/css/pearButton.css"/>
+    <style>
+        .layui-form {
+            width: 330px;
+            margin: auto;
+            margin-top: 180px;
+        }
+
+        .layui-form button {
+            width: 100%;
+            height: 44px;
+            line-height: 44px;
+            font-size: 16px;
+            font-weight: 550;
+        }
+
+        .layui-form-checked[lay-skin=primary] i {
+            border-color: #2D8CF0 !important;
+            background-color: #2D8CF0;
+            color: #fff;
+        }
+
+        .layui-tab-content {
+            margin-top: 15px;
+            padding-left: 0px;
+            padding-right: 0px;
+        }
+
+        .layui-form-item {
+            margin-top: 20px;
+        }
+
+        .layui-input {
+            height: 44px;
+            line-height: 44px;
+            padding-left: 15px;
+            border-radius: 3px;
+        }
+
+        .layui-input:focus {
+            box-shadow: 0px 0px 3px 1px #2D8CF0 !important;
+        }
+
+        .logo {
+            width: 60px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-left: 20px;
+        }
+
+        .title {
+            font-size: 30px;
+            font-weight: 550;
+            margin-left: 20px;
+            color: #2D8CF0 !important;
+            display: inline-block;
+            height: 60px;
+            line-height: 60px;
+            margin-top: 10px;
+            position: absolute;
+        }
+
+        .desc {
+            width: 100%;
+            text-align: center;
+            color: gray;
+            height: 60px;
+            line-height: 60px;
+        }
+    </style>
+</head>
+<body background="admin/images/background.svg">
+<form class="layui-form" action="javascript:void(0);">
+    <div class="layui-form-item">
+        <img class="logo" src="admin/images/factory.jpg"/>
+        <div class="title">欢迎登陆poseidon</div>
+        <div class="desc">
+            poseidon 管理系统
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <input placeholder="账 户 : admin" hover class="layui-input" id="username" value="muggle"/>
+    </div>
+    <div class="layui-form-item">
+        <input placeholder="密 码 : 888888" hover class="layui-input" type="password" id="password" value="123456"/>
+    </div>
+    <div class="layui-form-item">
+        <input type="checkbox" name="" title="记住密码" lay-skin="primary" checked>
+    </div>
+    <div class="layui-form-item">
+        <button class="pear-btn pear-btn-primary login">
+            登 入
+        </button>
+    </div>
+</form>
+<script src="component/layui/layui.js"></script>
+<script src="component/cookie.js"></script>
+<script src="admin/request.js"></script>
+<script>
+    layui.use(['form', 'element', 'jquery'], function () {
+        var flag = true;
+        var from = layui.form;
+        var element = layui.element;
+        var $ = layui.jquery;
+         cookie=layui.cookie;
+        $("body").on("click", ".login", function () {
+            if (flag) {
+                flag = false;
+                $.ajax({
+                        type: "post",
+                        url: "/sign_in",
+                        dataType: "json",
+                        contentType: "application/json",
+                        data: JSON.stringify({username: $('#username').val(), password: $('#password').val()}),
+                        success: function (data) {
+                            console.log(data.data);
+                            if (data.code == 200) {
+                                layer.msg(data.data)
+                                $.cookie('', data.data, {expires: 1});
+                                goIndex()
+                            } else {
+                                layer.msg(data.message);
+                                flag = true
+                            }
+                        },
+                        error: function () {
+                            flag = true
+                        }
+                    },
+                );
+            }
+        })
+    })
+</script>
+</body>
 </html>
