--- a/poseidon-oa/src/main/resources/static/login.html
+++ b/poseidon-oa/src/main/resources/static/login.html
@@ -102,7 +102,6 @@
 </form>
 <script src="component/layui/layui.js"></script>
 <script src="component/cookie.js"></script>
-<script src="admin/request.js"></script>
 <script>
     layui.use(['form', 'element', 'jquery'], function () {
         var flag = true;
@@ -120,14 +119,13 @@
                         contentType: "application/json",
                         data: JSON.stringify({username: $('#username').val(), password: $('#password').val()}),
                         success: function (data) {
-                            console.log(data.data);
+                            flag=true;
                             if (data.code == 200) {
-                                layer.msg(data.data)
-                                $.cookie('', data.data, {expires: 1});
-                                goIndex()
+                                $.cookie('token', data.data, {expires: 1});
+                                // goIndex()
+                                location.href="index.html";
                             } else {
                                 layer.msg(data.message);
-                                flag = true
                             }
                         },
                         error: function () {
