--- a/poseidon-oa/src/main/resources/static/login.html
+++ b/poseidon-oa/src/main/resources/static/login.html
@@ -89,7 +89,7 @@
         <input placeholder="账 户 : admin" hover class="layui-input" id="username" value="muggle"/>
     </div>
     <div class="layui-form-item">
-        <input placeholder="密 码 : 888888" hover class="layui-input" type="password" id="password" value="123456"/>
+        <input placeholder="密 码 : 888888" hover class="layui-input" type="password" id="password" value="xxxxxx"/>
     </div>
     <div class="layui-form-item">
         <input type="checkbox" name="" title="记住密码" lay-skin="primary" checked>
